[dev.04.30] *Footer almost done

--- a/shared/styles/_base.css
+++ b/shared/styles/_base.css
@@ -6,10 +6,14 @@ button:focus{
     outline: none;
 }
 
+._inner{
+    @apply w-auto max-w-screen-lg h-full flex mx-auto px-3
+}
+
 .icon{
     @apply flex-shrink-0 my-auto
 }
 
-._inner{
-    @apply w-auto max-w-screen-lg h-full flex mx-auto px-3
+.note li, p.note, span.note {
+    @apply text-note
 }
