--- a/shared/styles/button.css
+++ b/shared/styles/button.css
@@ -1,5 +1,5 @@
 ._button {
     @apply w-auto h-6 flex-shrink-0 px-3 my-auto bg-button-bg rounded-full
-    text-[12px] text-white
+    text-px-12 text-white
     hover:bg-button-hover
 }
