--- a/shared/styles/nav.css
+++ b/shared/styles/nav.css
@@ -3,8 +3,9 @@
     @apply w-full h-12 md:h-11 bg-black opacity-80
 }
 
-._nav *{
-    @apply text-nav-text
+._nav > * {
+    @apply text-px-12 font-weight-300
+    text-nav-text
     hover:text-nav-hover
 }
 
@@ -19,7 +20,6 @@
 }
 ._nav ul {
     @apply hidden md:flex px-3 my-auto flex-grow flex-row
-    text-[14px]
 }
 ._nav li {
     @apply mx-auto my-auto
