[dev.05.02] apply cascade and inheritance what I learned from MDN

--- a/shared/styles/_base.css
+++ b/shared/styles/_base.css
@@ -7,7 +7,7 @@ button:focus{
 }
 
 ._inner{
-    @apply w-auto max-w-screen-lg h-full flex mx-auto px-3
+    @apply w-auto max-w-screen-lg h-full mx-auto px-3
 }
 
 .icon{
