--- a/shared/styles/_components.css
+++ b/shared/styles/_components.css
@@ -2,7 +2,7 @@
 
 @import "./affix.css";
 @import "./button.css";
-@import "./nav.css";
+@import "header.css";
 @import "./notify.css";
 @import "./break.css";
 @import "./bread.css";
