--- a/shared/styles/button.css
+++ b/shared/styles/button.css
@@ -1,7 +1,6 @@
 ._button {
-    @apply w-auto h-6 flex-shrink-0 inline-block my-auto px-3 rounded-full
-    bg-button-bg
-    hover:bg-button-hover
-    text-center
-    text-px-12 text-white
+    @apply w-auto h-6 inline-block flex-shrink-0 rounded-full
+    my-auto px-3
+    bg-button-bg hover:bg-button-hover
+    text-center text-px-12 text-white
 }
