--- a/shared/styles/affix.css
+++ b/shared/styles/affix.css
@@ -1,7 +1,7 @@
 ._affix {
-    @apply w-full h-12 md:h-13 sticky top-11 bg-white
+    @apply w-full h-12 md:h-13 sticky top-0
     backdrop-filter backdrop-blur-lg  backdrop-saturate-100
-    bg-opacity-70
+    bg-opacity-affix-bg bg-white
     text-px-12 font-weight-400
     text-affix-text
 }
@@ -16,16 +16,20 @@
 
 ._affix-title {
     @apply flex-shrink-0
-    text-px-21 font-weight-600 text-affix-title
+    text-px-19 md:text-px-21 font-weight-600 text-affix-title text-opacity-affix-text
 }
 
 ._affix-subtitle {
     @apply flex-shrink-0 ml-2
-    text-px-21 font-weight-400 text-subtitle
+    text-px-19 md:text-px-21 font-weight-400 text-subtitle
 }
 
-._affix > ._inner .cur, .cur * {
-    @apply text-nav-text text-opacity-nav-cur
+._affix .break {
+    @apply bg-opacity-affix-bg bg-hr
+}
+
+._affix > ._inner .curr, ._affix > ._inner .curr *{
+    @apply text-black text-opacity-nav-cur
 }
 
 ._affix > ._inner > :not(._affix-title, ._affix-subtitle, ._button) {
@@ -37,7 +41,7 @@
 }
 
 ._affix a[href] {
-    @apply text-affix-link
+    @apply text-affix-link text-opacity-affix-text
 }
 
 ._affix a[href]:hover {
