--- a/shared/styles/header.css
+++ b/shared/styles/header.css
@@ -1,9 +1,9 @@
 ._header {
     @apply w-full h-12 md:h-11 bg-black
     backdrop-filter backdrop-blur-lg backdrop-saturate-100
-    bg-opacity-nav-bg
+    bg-opacity-header-bg
     text-px-14 font-weight-400
-    text-nav-text
+    text-header-text
 }
 
 ._header > ._inner {
@@ -12,7 +12,7 @@
 
 ._header > ._inner > * {
     @apply my-auto
-    text-nav-text hover:text-nav-hover
+    text-header-text hover:text-header-hover
 }
 
 ._header ._header-menu {
@@ -28,13 +28,13 @@
 }
 
 ._header > ._inner .curr, ._header > ._inner .curr * {
-    @apply text-nav-text text-opacity-nav-cur
+    @apply text-header-text text-opacity-header-cur
 }
 
 ._header > ._inner > :not(._header-menu, ._header-home, ._header-end) {
-    @apply  hidden md:inline-flex flex-grow text-nav-text hover:text-nav-hover
+    @apply  hidden md:inline-flex flex-grow text-header-text hover:text-header-hover
 }
 
 ._header > ._inner > :not(._header-menu, ._header-home, ._header-end) > *{
-    @apply mx-auto text-nav-text hover:text-nav-hover
+    @apply mx-auto text-header-text hover:text-header-hover
 }
