[dev.05.06] add mask, mixins catch esc and wheel, bind style

--- a/shared/styles/_components.css
+++ b/shared/styles/_components.css
@@ -8,3 +8,6 @@
 @import "bread.css";
 @import "bread-item.css";
 @import "footer.css";
+@import "mask.css";
+@import "drawer.css";
+@import "dropdown.css";
