--- a/shared/styles/notify.css
+++ b/shared/styles/notify.css
@@ -1,30 +1,29 @@
 ._notify {
-    @apply w-full h-11 bg-notify-bg
-    text-notify-text
-    text-px-14
-}
+  @apply w-full h-11 bg-notify-bg
+    text-notify-text text-px-14;
 
-._notify > ._inner {
-    @apply flex flex-row
-}
+  & > ._inner {
+    @apply flex flex-row;
 
-._notify > ._inner > * {
-    @apply my-auto
-}
+    & > * {
+      @apply my-auto;
+    }
 
-._notify > ._inner > :not(._notify-close) {
-    @apply flex-grow px-3 inline-block text-center
-}
+    & > :not(._notify-close) {
+      @apply flex-grow px-3 inline-block text-center;
+    }
 
-._notify > ._inner > :not(._notify-close) *{
-    @apply inline-block
-}
+    & > :not(._notify-close) * {
+      @apply inline-block;
+    }
+  }
 
-._notify a{
+  a {
     @apply no-underline
-    hover:underline
-}
+    hover:underline;
+  }
 
-._notify-close {
-    @apply mr-0
+  ._notify-close {
+    @apply mr-0;
+  }
 }
