--- a/shared/styles/affix.css
+++ b/shared/styles/affix.css
@@ -1,4 +1,5 @@
 ._affix {
+  z-index: 300;
   @apply w-full h-12 md:h-13 sticky top-0
     backdrop-filter backdrop-blur-lg  backdrop-saturate-100
     bg-opacity-affix-bg bg-white
@@ -17,11 +18,11 @@
       @apply text-black text-opacity-affix-cur;
     }
 
-    & > :not(._affix-title, ._affix-subtitle, ._button) {
-      @apply mr-3 inline-flex;
+    & > :not(._affix-title, ._affix-subtitle, ._affix-space, ._affix-arrow, ._button) {
+      @apply hidden md:inline-flex mr-3;
     }
 
-    & > :not(._affix-title, ._affix-subtitle, ._button) > * {
+    & > :not(._affix-title, ._affix-subtitle, ._affix-space, ._affix-arrow, ._button) > * {
       @apply mr-4;
     }
   }
@@ -47,6 +48,14 @@
   ._affix-subtitle {
     @apply flex-shrink-0 ml-2
         text-px-19 md:text-px-21 font-weight-400 text-subtitle;
+  }
+
+  ._affix-space {
+    @apply flex-grow
+  }
+
+  ._affix-arrow {
+    @apply md:hidden mr-4 text-opacity-affix-cur text-affix-text
   }
 
   .break {
