--- a/shared/styles/mask.css
+++ b/shared/styles/mask.css
@@ -1,4 +1,5 @@
 ._mask {
+    z-index: 100;
     -webkit-transition: opacity 1s ease 0.1s;
     transition: opacity 1s ease 0.1s;
     @apply fixed top-0 left-0 right-0 bottom-0 bg-black bg-opacity-40
