--- a/shared/styles/footer.css
+++ b/shared/styles/footer.css
@@ -10,19 +10,19 @@
     hover:underline hover:text-footer-title;
     }
 
-    & > :not(._bread, nav, .note) > a {
+    & > * > a {
       @apply no-underline text-link-product
     hover:underline hover:text-link-product;
     }
 
-    & > :not(._bread, nav, .note) > span {
-      @apply mr-2 inline-block;
+    & > * > span {
+      @apply mx-1 inline-block;
     }
   }
 
   ul,
   ol {
-    @apply mb-3 mx-auto;
+    @apply w-full mx-auto;
 
     &:first-child {
       @apply ml-0;
@@ -38,7 +38,7 @@
   }
 
   li {
-    @apply mb-2;
+    @apply py-1;
   }
 
   nav {
@@ -48,9 +48,5 @@
         @apply flex flex-col;
       }
     }
-  }
-
-  ._break {
-    @apply my-2;
   }
 }
