--- a/shared/fonts/material.css
+++ b/shared/fonts/material.css
@@ -2,7 +2,7 @@
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts-gstatic.fib.one/s/materialicons/v85/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
+  src: url(https://fonts.gstatic.cn/s/materialicons/v85/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
     format("woff2");
 }
 .material-icons {
@@ -25,7 +25,7 @@
   font-family: "Material Icons Outlined";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts-gstatic.fib.one/s/materialiconsoutlined/v56/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUcel5euIg.woff2)
+  src: url(https://fonts.gstatic.cn/s/materialiconsoutlined/v56/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUcel5euIg.woff2)
     format("woff2");
 }
 .material-icons-outlined {
