--- a/shared/styles/affix.css
+++ b/shared/styles/affix.css
@@ -4,7 +4,7 @@
     backdrop-filter backdrop-blur-lg  backdrop-saturate-100
     bg-opacity-affix-bg bg-white
     text-px-12 font-weight-400
-    text-affix-text;
+    text-affix-text text-opacity-affix-text;
 
   & > ._inner {
     @apply flex flex-row;
@@ -12,34 +12,30 @@
     & > * {
       @apply my-auto;
     }
-
-    .curr,
-    .curr * {
-      @apply text-black text-opacity-affix-cur;
-    }
-
-    &
-      > :not(._affix-title, ._affix-subtitle, ._affix-space, ._affix-arrow, ._button) {
-      @apply hidden md:flex md:flex-row mr-3;
-    }
-
-    &
-      > :not(._affix-title, ._affix-subtitle, ._affix-space, ._affix-arrow, ._button)
-      > * {
-      @apply mr-4;
-    }
   }
 
   a[href] {
-    @apply text-affix-link text-opacity-affix-text;
+    @apply text-affix-link;
   }
 
   a[href]:hover {
     @apply text-link-product;
   }
 
+  .curr {
+    @apply text-black text-opacity-affix-cur;
+  }
+
+  .slot {
+    @apply hidden md:flex md:flex-row mx-2;
+
+    & > * {
+      @apply mx-2 my-auto;
+    }
+  }
+
   ._affix-title {
-    @apply flex-shrink-0
+    @apply flex-shrink-0 px-2
         text-px-19 md:text-px-21 font-weight-600
         text-affix-title text-opacity-affix-text;
 
@@ -49,7 +45,7 @@
   }
 
   ._affix-subtitle {
-    @apply flex-shrink-0 ml-2
+    @apply flex-shrink-0 px-2
         text-px-19 md:text-px-21 font-weight-400 text-subtitle;
   }
 
@@ -58,10 +54,10 @@
   }
 
   ._affix-arrow {
-    @apply md:hidden mr-4 text-opacity-affix-cur text-affix-text;
+    @apply md:hidden mx-2 text-opacity-affix-cur text-affix-text;
   }
 
-  .break {
-    @apply bg-opacity-affix-bg bg-hr;
+  ._break-x {
+    @apply bg-opacity-100 bg-hr my-0;
   }
 }
